// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#Button html 1`] = `
<Button
  onClick={[MockFunction]}
>
  <Translate
    html={true}
    t="kek"
    transform={[Function]}
    values={Object {}}
  />
</Button>
`;

exports[`#Button string 1`] = `
<Button
  onClick={[MockFunction]}
>
  <Translate
    html={false}
    t="kek"
    transform={[Function]}
    values={Object {}}
  />
</Button>
`;
